Add links in the /albums page to each album page

--- a/views/albums.erb
+++ b/views/albums.erb
@@ -7,7 +7,8 @@
     <% @albums.each do |album| %>
       <div>
         Title: <%= album.title %> <br>
-        Release: <%= album.release_year %>
+        Release: <%= album.release_year %><br>
+        <a href="/album/<%= album.id %>">Link</a>
       </div>
     <% end %>
   </body>
